<resources>
    <string name="APP_NAME_CN">应用隐藏大师</string>
    <string name="WITH_VAULT">true</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="action_cloud_setting">Cloud Sync Setting</string>
    <string name="action_loading_text">Loading...</string>
    <string name="action_loading_upload">Uploading...</string>
    <string name="action_no_ads">No Ads</string>
    <string name="action_settings">Settings</string>
    <string name="activity_title_cloud_setting">Cloud Sync Settings</string>
    <string name="ad_photo_hider_name">Photo Hider</string>
    <string name="ad_private_browser_name">Private Browser</string>
    <string name="ad_standalone_button">Get Photo Hider Pro</string>
    <string name="ad_standalone_impression1">Cloud Sync</string>
    <string name="ad_standalone_impression2"> Free</string>
    <string name="ad_standalone_skip">Skip</string>
    <string name="ad_standalone_subtitle">Powered by GoogleDrive</string>
    <string name="ad_standalone_title">PHOTO HIDER PRO</string>
    <string name="add_account_button_label">Add account</string>
    <string name="add_app">Add App</string>
    <string name="add_apps">Add Apps</string>
    <string name="admob_ad_attribution">Ad</string>
    <string name="album_all_images">All Images</string>
    <string name="album_all_images_videos">All Images</string>
    <string name="album_all_videos">All Videos</string>
    <string name="album_dialog_sure">OK</string>
    <string name="album_permission_camera_image_failed_hint">Failed to get Camera/Storage permissions, please authorize in the Settings before use.</string>
    <string name="album_permission_camera_video_failed_hint">Failed to get Camera/Storage/Microphone permissions, please authorize in the Settings before use.</string>
    <string name="album_permission_storage_failed_hint">Failed to get Storage permission, please authorize in the Settings before use.</string>
    <string name="album_title_permission_failed">Access to failure</string>
    <string name="alert_already_purchased">Item is already purchased</string>
    <string name="app_name">App Hider</string>
    <string name="app_name_inner">App Hider</string>
    <string name="app_name_vault">Calculator+</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="ask_for_hide">opened app show in recent， are you sure want to hide them from recent</string>
    <string name="ask_for_show">opened app have been hidden from the recent， are you sure want to show them in recent</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="brand">Brand</string>
    <string name="bt_annoying">It\'s Annoying or Disturbing</string>
    <string name="bt_annoying_desc">For example spam or adult nudity</string>
    <string name="bt_harmful">It\'s Harmful</string>
    <string name="bt_harmful_desc">For example, terrorism, child safety or suicide</string>
    <string name="bt_send_problem_report">send</string>
    <string name="button_cancel_download">Cancel</string>
    <string name="button_logout">logout</string>
    <string name="button_queue_for_wifi">Queue</string>
    <string name="button_start_now">Start now</string>
    <string name="button_sync_now">SYNC NOW</string>
    <string name="button_sync_now_syncing">SYNCING...</string>
    <string name="button_text_preview_delete">Delete</string>
    <string name="button_text_preview_export">Export</string>
    <string name="button_text_preview_move">Move</string>
    <string name="button_text_preview_rotate">Rotate</string>
    <string name="button_text_preview_share">Share</string>
    <string name="button_unbind_sync_account">LOGOUT &amp; UNBIND</string>
    <string name="cancel">Cancel</string>
    <string name="chanel">App Hider</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="check_user_sure_delete_album">Are you sure you want to remove this album?</string>
    <string name="checkbox_use_fingerprint">Use your fingerprint to unlock</string>
    <string name="choose">Choose</string>
    <string name="choose_empty">Chooser is Empty</string>
    <string name="clr">clr</string>
    <string name="com.crashlytics.android.build_id">7b23f3a0-da07-47e3-8b5f-e1cff09fdd76</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b&gt;facebook.com/device&lt;/b&gt; and enter the code shown above.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_smart_device_instructions">To connect your account, open the Facebook app on your mobile device and check for notifications.</string>
    <string name="com_facebook_smart_device_instructions_or">- OR -</string>
    <string name="com_facebook_smart_login_confirmation_cancel">Not you?</string>
    <string name="com_facebook_smart_login_confirmation_continue_as">Continue as %1$s</string>
    <string name="const_e">e</string>
    <string name="const_pi">π</string>
    <string name="desc_const_e">Euler\'s number</string>
    <string name="desc_const_pi">pi</string>
    <string name="desc_fun_cos">cosine</string>
    <string name="desc_fun_ln">natural logarithm</string>
    <string name="desc_fun_log">logarithm</string>
    <string name="desc_fun_sin">sine</string>
    <string name="desc_fun_tan">tangent</string>
    <string name="desc_lparen">left parenthesis</string>
    <string name="desc_op_fact">factorial</string>
    <string name="desc_op_pow">power</string>
    <string name="desc_op_sqrt">square root</string>
    <string name="desc_rparen">right parenthesis</string>
    <string name="edit_activity_select_all_files">Select All</string>
    <string name="edit_activity_selected_info_title">items isSelected</string>
    <string name="edit_activity_unselect_all_files">unselect All</string>
    <string name="float_add_album">Add Album</string>
    <string name="float_import_photo_video">Import Photo/Video</string>
    <string name="float_take_photo">Take Photo</string>
    <string name="float_take_video">Take Video</string>
    <string name="fun_cos">cos</string>
    <string name="fun_ln">ln</string>
    <string name="fun_log">log</string>
    <string name="fun_sin">sin</string>
    <string name="fun_tan">tan</string>
    <string name="hide_from_recent">Hide from Recent</string>
    <string name="import_no_slct_title">import</string>
    <string name="lparen">(</string>
    <string name="menu_item_app_protection">AppHider Protection</string>
    <string name="menu_item_notification">Notification</string>
    <string name="menu_item_rate_us">Rate us</string>
    <string name="menu_item_reinstall">Fix All Imported App</string>
    <string name="menu_item_reset_pin">ReSet PIN</string>
    <string name="menu_item_use_fingerprint">Use Fingerprint Unlock</string>
    <string name="notification_every">Every notification from hiden apps</string>
    <string name="notification_none">None</string>
    <string name="notification_total">Total number of notifications from hiden apps</string>
    <string name="op_fact">!</string>
    <string name="op_pow">^</string>
    <string name="op_sqrt">√</string>
    <string name="rparen">)</string>
    <string name="setting_desc_show_tips_wlg">Display options when launch imported App</string>
    <string name="setting_hide_from_recent_desc">Hide this app from app switcher</string>
    <string name="setting_protection_desc">Protect AppHider with Password / Fingerprint / Icon Disguise</string>
    <string name="setting_rate_us_desc">Give us 5 stars if you like this app</string>
    <string name="setting_title_show_tips_wlg">Show Tips When Launch Guest App</string>
    <string name="text_feedback">Feedback</string>
    <string name="text_setting_appversion_title">Version</string>
    <string name="toolbar_title_setting">Setting</string>
</resources>