<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
            android:theme="?attr/themeToolbarOverlay"
            android:id="@+id/setting_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="enterAlways|scroll"
            app:title="@string/toolbar_title_setting"/>
    </android.support.design.widget.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.prism.commons.ui.settings.SettingEntrySwitchLayout
                android:id="@+id/setting_protect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:description="@string/setting_protection_desc"
                app:title="@string/menu_item_app_protection"/>
            <com.prism.commons.ui.settings.SettingEntryLayout
                android:id="@+id/setting_reset_pin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onResetPin"
                app:title="@string/menu_item_reset_pin"/>
            <com.prism.commons.ui.settings.SettingEntryLayout
                android:id="@+id/setting_reinstall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onReinstall"
                app:title="@string/menu_item_reinstall"/>
            <com.prism.commons.ui.settings.SettingEntrySwitchLayout
                android:id="@+id/setting_use_fingerprint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/menu_item_use_fingerprint"/>
            <com.prism.commons.ui.settings.SettingEntryLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/menu_item_notification"
                app:titleOnly="true">
                <RadioGroup
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp">
                    <RadioButton
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:id="@+id/radio_notification_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/notification_total"
                        android:onClick="onNotificationRadioButtonClicked"/>
                    <RadioButton
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:id="@+id/radio_notification_all"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/notification_every"
                        android:onClick="onNotificationRadioButtonClicked"/>
                    <RadioButton
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:id="@+id/radio_notification_none"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/notification_none"
                        android:onClick="onNotificationRadioButtonClicked"/>
                </RadioGroup>
            </com.prism.commons.ui.settings.SettingEntryLayout>
            <com.prism.commons.ui.settings.SettingEntrySwitchLayout
                android:id="@+id/setting_hide_from_recent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:description="@string/setting_hide_from_recent_desc"
                app:title="@string/hide_from_recent"/>
            <com.prism.commons.ui.settings.SettingEntryLayout
                android:id="@+id/setting_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRateUs"
                app:description="@string/setting_rate_us_desc"
                app:title="@string/menu_item_rate_us"/>
            <include layout="@layout/part_setting_contact_us"/>
            <com.prism.commons.ui.settings.SettingEntryLayout
                android:id="@+id/setting_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onFeedback"
                app:title="@string/text_feedback"/>
            <com.prism.commons.ui.settings.SettingEntrySwitchLayout
                android:id="@+id/setting_show_tips_when_launch_guest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:description="@string/setting_desc_show_tips_wlg"
                app:title="@string/setting_title_show_tips_wlg"/>
            <com.prism.commons.ui.settings.SettingEntryLayout
                android:id="@+id/setting_app_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/text_setting_appversion_title"
                app:titleOnly="true"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
