<?xml version="1.0" encoding="utf-8"?>
<com.gaia.ngallery.ui.widget.floatingbutton.FloatingActionsMenu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="bottom|right"
    android:id="@+id/multiple_actions"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:fab_addButtonColorNormal="?attr/colorFAB"
    app:fab_addButtonColorPressed="?attr/colorFABDark"
    app:fab_addButtonPlusIconColor="#ffffff"
    app:fab_expandBackgroundColor="#99000000"
    app:fab_labelStyle="@style/menu_labels_style"
    app:layout_dodgeInsetEdges="bottom">
    <com.gaia.ngallery.ui.widget.floatingbutton.FloatingActionButton
        android:id="@+id/ft_import_video_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fab_colorNormal="?attr/colorFABDark"
        app:fab_icon="@drawable/ic_insert_photo"
        app:fab_size="mini"
        app:fab_title="@string/float_import_photo_video"/>
    <com.gaia.ngallery.ui.widget.floatingbutton.FloatingActionButton
        android:id="@+id/ft_take_a_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fab_colorNormal="?attr/colorFABDark"
        app:fab_icon="@drawable/ic_take_photo"
        app:fab_size="mini"
        app:fab_title="@string/float_take_photo"/>
    <com.gaia.ngallery.ui.widget.floatingbutton.FloatingActionButton
        android:id="@+id/ft_take_a_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fab_colorNormal="?attr/colorFABDark"
        app:fab_icon="@drawable/ic_take_video"
        app:fab_size="mini"
        app:fab_title="@string/float_take_video"/>
    <com.gaia.ngallery.ui.widget.floatingbutton.FloatingActionButton
        android:id="@+id/ft_add_album"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fab_colorNormal="?attr/colorFABDark"
        app:fab_icon="@drawable/ic_add_album"
        app:fab_size="mini"
        app:fab_title="@string/float_add_album"/>
</com.gaia.ngallery.ui.widget.floatingbutton.FloatingActionsMenu>
