<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_ad_standalone"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/ll_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginRight="15dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:textAppearance="@style/TAStandaloneADSkip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ad_standalone_skip"/>
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_skip"/>
    </LinearLayout>
    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/iv_pro_icon"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:src="@drawable/ic_app_hider"/>
        <LinearLayout
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:id="@+id/ll_pro_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp">
            <TextView
                android:textAppearance="@style/TAStandaloneADTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/ad_standalone_title"/>
            <TextView
                android:textAppearance="@style/TAStandaloneADSubTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ad_standalone_subtitle"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">
        <ImageView
            android:id="@+id/iv_pro_impression"
            android:layout_width="208dp"
            android:layout_height="187dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/ic_standalone_ad_impression"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:textAppearance="@style/TAStandaloneADImpression1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ad_standalone_impression1"/>
            <TextView
                android:textAppearance="@style/TAStandaloneADImpression2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ad_standalone_impression2"/>
        </LinearLayout>
        <Button
            android:id="@+id/bt_get_pro"
            android:layout_width="288dp"
            android:layout_height="44dp"
            android:layout_marginTop="58dp"
            android:layout_marginBottom="48dp"
            android:text="@string/ad_standalone_button"
            style="@style/TASTandaloneADButtonStyle"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
