<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#ffffff"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="47dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:orientation="horizontal"
            android:background="#000000"
            android:layout_width="match_parent"
            android:layout_height="48dp">
            <TextView
                android:textSize="16sp"
                android:textColor="#1ea25a"
                android:layout_gravity="center_vertical"
                android:id="@+id/tv_cancel_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:text="@string/cancel"
                android:layout_weight="1"/>
            <LinearLayout
                android:layout_gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <TextView
                    android:textSize="16sp"
                    android:textColor="#ffffff"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/tv_selected_imgssss"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"/>
                <TextView
                    android:textSize="16sp"
                    android:textColor="#ffffff"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/edit_activity_selected_info_title"/>
            </LinearLayout>
            <TextView
                android:textSize="16sp"
                android:textColor="#1ea25a"
                android:layout_gravity="center_vertical"
                android:id="@+id/tv_select_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:text="@string/edit_activity_select_all_files"
                android:layout_weight="1"/>
        </LinearLayout>
        <in.myinnos.alphabetsindexfastscrollrecycler.IndexFastScrollRecyclerView
            android:id="@+id/rv_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:setIndexbarMargin="0"
            app:setIndexbarWidth="15"/>
    </LinearLayout>
    <Button
        android:textSize="15sp"
        android:textColor="@color/gallery_colorFont"
        android:gravity="center"
        android:layout_gravity="bottom|center_horizontal"
        android:id="@+id/confirm_choice"
        android:background="@drawable/shap_preview_import_btn"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginBottom="14dp"
        android:text="@string/import_no_slct_title"
        android:textAllCaps="true"/>
</FrameLayout>
